fewer lies in readme

--- a/README.org
+++ b/README.org
@@ -1,24 +1,1 @@
-#+TODO: TODO INPROGRESS | DONE WONTFIX
-uberlisp: in-progress lisp1 interpreter with GC, reader macros, for PC and Arduino
-* INPROGRESS finish alists
-** DONE needs some kind of eq
-* eval
-** TODO implement environments using alists
-** TODO refer special forms to repl env
-** TODO eval, apply
-* TODO remove limit on symbol size
-* DONE symbol equality with hash, identity with sdbm hashcode
-* numerics
-** TODO remove limitation on size
-** TODO support negative numbers
-** ratios?
-** numeric tower with gmp?
-* TODO strings
-** add read_string to read.c
-** != to symbols, but still use hashcode
-* TODO read-macros
-** see bottom of read.c
-** alist of dispatch functions?
-*** could then add to alist from lisp
-* TODO fexpr, fsubr
-* TODO [[http://sourceware.org/libffi/][libffi]]?
+uberlisp: an in-progress lisp1 interpreter for the Arduino
